Fix responsive test on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -331,7 +331,10 @@ button:focus {
 
   h2 {
     margin-block-end: 1%;
-    padding: 4% 0 0 0;
+  }
+
+  p {
+   padding: 0 0 0 3%;
   }
 
   .stat-card-wrapper {
@@ -380,10 +383,9 @@ button:focus {
   .profile-info {
     width: 30%;
     height: 100%;
-    padding: 0;
     border: 0;
     justify-content: flex-start;
-    padding: 0 0 2% 1%;
+    padding: 2% 1% 0 0;
   }
 
   .personal-info, .goal-steps-info {
